update the layout

--- a/index.html
+++ b/index.html
@@ -2,31 +2,80 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>My Portfolio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>My Portfolio</title>
 </head>
 
 <body>
-    <header>
-        <h1 id="header-box">Saghar Portfolio</h1>
-        <nav>
-            <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact Me</a></li>
-                <li><a href="#">Resume</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
+  <header>
+    <h1 id="header-box">Saghar Portfolio</h1>
+    <nav>
+      <ul>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Contact Me</a></li>
+        <li><a href="#">Resume</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="subtitle">
+      
+      
+    </section>
+    <section class="about-me">
+      <aside>
+        <h2>About me</h2>
+      </aside>
 
-    </main>
-    <footer>
+      <p class="division">
+        And the product cards will wrap around as the screen gets smaller.
+        And the product cards will wrap around as the screen gets smaller.
+        And the product cards will wrap around as the screen gets smaller.
+        And the product cards will wrap around as the screen gets smaller.
+        And the product cards will wrap around as the screen gets smaller.
+      </p>
+    </section>
+    <section class="work">
+      <aside>
+        <h2>work</h2>
+      </aside>
+      <div class="division"  >
 
-    </footer>
+        <section id="img-layout" >
+          <img class="image-1" src="./assets/images/image (1).png" alt=""  >
+        </section>
+
+        <section class="group-images">
+          <img src="./assets/images/image (1).png" alt="" width="90vh">
+          <img src="./assets/images/image (1).png" alt="" width="90vh">
+          <img src="./assets/images/image (1).png" alt="" width="90vh">
+          <img src="./assets/images/image (1).png" alt="" width="90vh">
+        </section>
+      </div>
+
+
+    </section>
+    <section class="Contact-me">
+      <aside>
+        <h2>Contact me</h2>
+      </aside>
+
+      <nav class="division">
+        <a href="http://">206.613.9840</a>
+        <a href="http://">behinaeen.saghar@gmail.com</a>
+        <a href="http://">Github</a>
+        <a href="http://">twitter</a>
+        <a href="http://">Linkedin</a>
+      </nav>
+    </section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
 
 </html>
