update the box lable

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </header>
   <main>
     <section class="subtitle">
-      
-      
+
+
     </section>
     <section class="about-me">
       <aside>
@@ -43,17 +43,50 @@
       <aside>
         <h2>work</h2>
       </aside>
-      <div class="division"  >
+      <div class="division">
 
-        <section id="img-layout" >
-          <img class="image-1" src="./assets/images/image (1).png" alt=""  >
+        <section class="surf-report">
+          <div class="container">
+            <img id="image-1" src="./assets/images/surfreport.jpeg" alt="" >
+            <div class="text-block">
+              <h4>Surf Report</h34>
+                <h6>MernStack</h6>
+            </div>
+          </div>
+
         </section>
 
         <section class="group-images">
-          <img src="./assets/images/image (1).png" alt="" width="90vh">
-          <img src="./assets/images/image (1).png" alt="" width="90vh">
-          <img src="./assets/images/image (1).png" alt="" width="90vh">
-          <img src="./assets/images/image (1).png" alt="" width="90vh">
+          <div class="container">
+            <img src="./assets/images/image (1).png" alt="" width="90vh">
+            <div class="text-block">
+              <h4>SLED Wall</h34>
+                <h6>Node/loT</h6>
+            </div>
+          </div>
+          <div class="container">
+            <img src="./assets/images/image (1).png" alt="" width="90vh">
+            <div class="text-block">
+              <h4>SLED Wall</h34>
+                <h6>Node/loT</h6>
+            </div>
+          </div>
+          <div class="container">
+            <img src="./assets/images/image (1).png" alt="" width="90vh">
+            <div class="text-block">
+              <h4>Surf Report</h34>
+                <h6>MernStack</h6>
+            </div>
+          </div>
+          <div class="container">
+            <img src="./assets/images/image (1).png" alt="" width="90vh">
+            <div class="text-block">
+              <h4>Surf Report</h34>
+                <h6>MernStack</h6>
+            </div>
+          </div>
+
+
         </section>
       </div>
 
