--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <header>
     <h1 id="header-box">Saghar Portfolio</h1>
     <nav>
-      <ul>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact Me</a></li>
-        <li><a href="#">Resume</a></li>
-      </ul>
+      
+        <a href="#">About Me</a>
+        <a href="#">Work</a>
+        <a href="#">Contact Me</a>
+        <a href="#">Resume</a>
+      
     </nav>
   </header>
   <main>
@@ -28,7 +28,8 @@
     </section>
     <section class="about-me">
       <aside>
-        <h2>About me</h2>
+        <h2>About</h2>
+        <h2>Me</h2>
       </aside>
 
       <p class="division">
@@ -41,7 +42,7 @@
     </section>
     <section class="work">
       <aside>
-        <h2>work</h2>
+        <h2>Work</h2>
       </aside>
       <div class="division">
 
@@ -50,7 +51,7 @@
             <img id="image-1" src="./assets/images/surfreport.jpeg" alt="" >
             <div class="text-block">
               <h4>Surf Report</h34>
-                <h6>MernStack</h6>
+                <h6>Mern Stack</h6>
             </div>
           </div>
 
@@ -58,31 +59,31 @@
 
         <section class="group-images">
           <div class="container">
-            <img src="./assets/images/image (1).png" alt="" width="90vh">
+            <img src="./assets/images/image (1).png" alt="">
             <div class="text-block">
-              <h4>SLED Wall</h34>
+              <h4>LED Wall</h34>
                 <h6>Node/loT</h6>
             </div>
           </div>
           <div class="container">
-            <img src="./assets/images/image (1).png" alt="" width="90vh">
+            <img src="./assets/images/image (1).png" alt="" >
             <div class="text-block">
-              <h4>SLED Wall</h34>
-                <h6>Node/loT</h6>
+              <h4>Calculator</h34>
+                <h6>React/Java Script/CSS</h6>
             </div>
           </div>
           <div class="container">
-            <img src="./assets/images/image (1).png" alt="" width="90vh">
+            <img src="./assets/images/image (1).png" alt="">
             <div class="text-block">
-              <h4>Surf Report</h34>
-                <h6>MernStack</h6>
+              <h4>Pastel Puzzels</h34>
+                <h6>MERN Stack</h6>
             </div>
           </div>
           <div class="container">
-            <img src="./assets/images/image (1).png" alt="" width="90vh">
+            <img src="./assets/images/image (1).png" alt="" >
             <div class="text-block">
-              <h4>Surf Report</h34>
-                <h6>MernStack</h6>
+              <h4>Run Buddy</h34>
+                <h6>HTML/CSS</h6>
             </div>
           </div>
 
@@ -94,7 +95,8 @@
     </section>
     <section class="Contact-me">
       <aside>
-        <h2>Contact me</h2>
+        <h2>Contact</h2>
+        <h2>Me</h2>
       </aside>
 
       <nav class="division">
