--- a/index.html
+++ b/index.html
@@ -10,84 +10,113 @@
 </head>
 
 <body>
+
   <header>
-    <h1 id="header-box">Saghar Portfolio</h1>
+    <div id="header-box">
+      <!-- my picture  -->
+      <img src="./assets/images/6875DFAC-D666-42CD-910D-4512C80C1A92.jpeg" alt="my picture" width="115" height="115">
+      <h1>Saghar Portfolio</h1>
+    </div>
+
+    <!-- header navigation bar -->
     <nav>
-      
-        <a href="#about-me">About Me</a>
-        <a href="#work">Work</a>
-        <a href="#Contact-me">Contact Me</a>
-        <a href="#">Resume</a>
-       
+      <a href="#about-me">About Me</a>
+      <a href="#work">Work</a>
+      <a href="#Contact-me">Contact Me</a>
+      <a href="#">Resume</a>
+
     </nav>
   </header>
+
   <main>
-  <section class="subtitle">
-    <div id="backg-pic"></div>
-    <h3>Web Design!</h3>
-  </section>
-  
-
-
+    <!-- subtitle section with picture background and text -->
+    <section class="subtitle">
+      <div id="backg-pic"></div>
+      <h3>Web Design!</h3>
     </section>
-    <section id="about-me"class="about-me">
+
+    <!-- About me Section -->
+    <section id="about-me" class="about-me">
+      <!-- title section -->
       <aside>
         <h2>About</h2>
         <h2>Me</h2>
       </aside>
+      <!-- content section -->
+      <section class="division">
+        <p>
+          My name is Saghar Behinaein. I decided to change my career from architecture to programmer/web developer. I had
+          many reason for my decision that I listed below:
+        </p>
+        <ul>
+          <li>Enjoy learning, and providing paths to both career and personal growth.</li>
+          <li>Enjoy chalanging and solving problems</li>
+          <li>I enjoy to try new things</li>
+        </ul>
 
-      <p class="division">
-        And the product cards will wrap around as the screen gets smaller.
-        And the product cards will wrap around as the screen gets smaller.
-        And the product cards will wrap around as the screen gets smaller.
-        And the product cards will wrap around as the screen gets smaller.
-        And the product cards will wrap around as the screen gets smaller.
-      </p>
+        <p style="font-size:20px" >My Skills:</p>
+
+        <ul >
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Java</li>
+          <li>Java Script</li>
+        </ul>
+
+      </section>
     </section>
+
+    <!-- Work Section -->
     <section id="work" class="work">
+      <!-- title section -->
       <aside>
         <h2>Work</h2>
       </aside>
+      <!-- Content section -->
       <div class="division">
-
+        <!-- main section -->
         <section class="surf-report">
           <div class="container">
-            <img id="image-1" src="./assets/images/surfreport.jpeg" alt="" >
+            <img class="image-1" src="./assets/images/surfreport.jpeg" alt="Surf Report">
             <div class="text-block">
               <h4>Surf Report</h4>
-                <h6>Mern Stack</h6>
+              <h6>Mern Stack</h6>
             </div>
           </div>
 
         </section>
-
+        <!-- sub sections -->
         <section class="group-images">
+          <!-- LED Wall section -->
           <div class="container">
-            <img src="./assets/images/image (1).png" alt="">
+            <img src="./assets/images/led wall.jpeg" alt="LED Wall">
             <div class="text-block">
               <h4>LED Wall</h4>
-                <h6>Node/loT</h6>
+              <h6>Node/loT</h6>
             </div>
           </div>
+          <!-- Calculator Section -->
           <div class="container">
-            <img src="./assets/images/image (1).png" alt="" >
+            <img src="./assets/images/calculator.jpeg" alt="Calculator">
             <div class="text-block">
               <h4>Calculator</h4>
-                <h6>React/Java Script/CSS</h6>
+              <h6>React/Java Script/CSS</h6>
             </div>
           </div>
+          <!-- Pastel Puzzels section  -->
           <div class="container">
-            <img src="./assets/images/image (1).png" alt="">
+            <img src="./assets/images/pastel-puzzels.jpeg" alt="Pastel Puzzels">
             <div class="text-block">
               <h4>Pastel Puzzels</h4>
-                <h6>MERN Stack</h6>
+              <h6>MERN Stack</h6>
             </div>
           </div>
+          <!-- Run Buddy Section -->
           <div class="container">
-            <img src="./assets/images/image (1).png" alt="" >
+            <img src="./assets/images/run-buddy.avif" alt="Run-Buddy">
             <div class="text-block">
               <h4>Run Buddy</h4>
-                <h6>HTML/CSS</h6>
+              <h6>HTML/CSS</h6>
             </div>
           </div>
 
@@ -97,23 +126,27 @@
 
 
     </section>
+    <!-- Contact me Section -->
     <section id="Contact-me" class="Contact-me">
+        <!-- title section -->
       <aside>
         <h2>Contact </h2>
         <h2>Me</h2>
       </aside>
-
+<!-- content Section -->
       <nav class="division">
-        <a href="http://">206.613.9840</a>
-        <a href="http://">behinaeen.saghar@gmail.com</a>
-        <a href="http://">Github</a>
+
+        <a href="tel:+12066139840">206.613.9840</a>
+        <a href="mailto:behinaeen.saghar@gmail.com">behinaeen.saghar@gmail.com</a>
+        <a href="https://github.com/">Github</a>
         <a href="http://">twitter</a>
-        <a href="http://">Linkedin</a>
+        <a href="https://www.linkedin.com/feed/" target="-blank">Linkedin</a>
       </nav>
     </section>
   </main>
-  <footer>
 
+  <footer>
+    <h5>Saghar Behinaein Portfolio</h5>
   </footer>
 </body>
 
