--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
       </aside>
       <!-- content section -->
       <section class="division">
-        <p>
-          My name is Saghar Behinaein. I decided to change my career from architecture to programmer/web developer. I had
-          many reason for my decision that I listed below:
+        <p >
+          My name is Saghar Behinaein.I graduated from the University of Washington with an architecture major. I decided to change my career from architecture to a programmer/web developer. I am doing my UW Bootcamp program to pursue my goal.
+          
         </p>
+        <br>
+        <p >I had many reasons for my decision which are:</p>
         <ul>
           <li>Enjoy learning, and providing paths to both career and personal growth.</li>
           <li>Enjoy chalanging and solving problems</li>
@@ -139,7 +141,6 @@
         <a href="tel:+12066139840">206.613.9840</a>
         <a href="mailto:behinaeen.saghar@gmail.com">behinaeen.saghar@gmail.com</a>
         <a href="https://github.com/">Github</a>
-        <a href="http://">twitter</a>
         <a href="https://www.linkedin.com/feed/" target="-blank">Linkedin</a>
       </nav>
     </section>
